// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariantButton accent snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#9B51E0",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Accent
  </div>
</button>
`;

exports[`VariantButton disabled snapshot 1`] = `
<button
  disabled={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#E0E0E0",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#828282",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Disabled
  </div>
</button>
`;

exports[`VariantButton error snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EB5757",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Error
  </div>
</button>
`;

exports[`VariantButton overview special-chars snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }
  >
    <svg
      aria-hidden="true"
      className="octicon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path fill-rule=\\"evenodd\\" d=\\"M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z\\"></path>",
        }
      }
      fill="currentColor"
      height={16}
      role="img"
      style={
        Object {
          "display": "inline-block",
          "userSelect": "none",
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 16 16"
      width={16}
    />
  </div>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    s%~\`
  </div>
</button>
`;

exports[`VariantButton primary snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2F80ED",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Primary
  </div>
</button>
`;

exports[`VariantButton success snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#219653",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Success
  </div>
</button>
`;

exports[`VariantButton warning snapshot 1`] = `
<button
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EB5757",
      "border": "1px solid #000000",
      "borderRadius": 8,
      "color": "#F2F2F2",
      "display": "flex",
    }
  }
>
  <div
    data-testid="label"
    style={
      Object {
        "padding": "0 10px",
      }
    }
  >
    Warning
  </div>
</button>
`;
